# MambaOut

./: .gitignore  README.ja.md  README.ko.md  README.zh-CN.md  README.zh-TW.md  imagenet_classes.py  pyproject.toml  test.py
.github/: dependabot.yml
.github/workflows/: check-links.yml  translate-readme.yml
